cleanup + convert to java 13